src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginCanvas.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" ShowGridLines="true">

	<Canvas
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="450"
  Width="450"
  Background="yellow"
  Margin="-10,-90,-30,-40">

		<Button Height="100" Width="100" Canvas.Top="135" />
		<Button Height="100" Width="100" Canvas.Right="13" />
		<Button Height="100" Width="100" Canvas.Bottom="225" />
		<Button Height="100" Width="100" Canvas.Left="99" />
		<Button Height="100" Width="100" Canvas.Bottom="101" Canvas.Right="77" />
		<Button Height="100" Width="100" Canvas.Left="101" Canvas.Top="177" />
		<Button Height="100" Width="100" Canvas.Bottom="401" Canvas.Left="177" />
		<Button Height="100" Width="100" Canvas.Bottom="1" Canvas.Left="7" />
		<Button Height="100" Width="100" Canvas.Top="101" Canvas.Left="77" />

	</Canvas>

</Grid>
